# gmu_objects

./: .gitignore  CMakeLists.txt  package-info.json.in
bufGranul~/bufGranul~.xcodeproj/: project.pbxproj
liveGranul~/: LiveGranul~.c
liveGranul~/liveGranul~.xcodeproj/: project.pbxproj
src/projects/bufGranul_tilde/: CMakeLists.txt  bufGranul2~_DSP.c
src/script/: max-posttarget.cmake  max-pretarget.cmake
